--- a/src/gui.html
+++ b/src/gui.html
@@ -61,7 +61,6 @@
             </table>
         </div>
         <div class="fflex mt10">
-            <!--            style="float: right;-->
             <el-button
                     :disabled="state.addMode === true"
                     type="success"
@@ -73,7 +72,7 @@
                     :disabled="state.addMode === true || data.pipeline.length === 0"
                     type="primary"
                     @click="command('preview_pipeline')">
-                <i class="zmdi zmdi-slideshow mr5"></i>Preview pipeline
+                <i class="zmdi zmdi-slideshow mr5"></i>Preview entire pipeline
             </el-button>
         </div>
     </sly-card>
@@ -84,8 +83,6 @@
                   title="Settings"
                   subtitle="Find and configure augmentation"
                   style="min-width: 310px; max-width: 310px;">
-
-
             <sly-field title="Augmenter Category" description="Choose augmentation category">
                 <el-select v-model="state.category" placeholder="Select category">
                     <el-option v-for="item in data.categories" :key="item" :label="item" :value="item"></el-option>
@@ -143,6 +140,11 @@
                     </div>
                 </sly-field>
                 <div v-if="state.aug">
+                    <el-button type="primary"
+                               @click="command('preview')">
+                        <i class="zmdi zmdi-slideshow" style="margin-right: 5px"></i>Preview single augmentation
+                    </el-button>
+
                     <hr class="mt10 mb10" style="border: 0; border-top: 1px solid rgba(0,0,0,.12);"/>
                     <a :href="data.config[state.category][state.aug].durl" target="_blank">
                         Official documentation <i class="zmdi zmdi-open-in-new"></i>
@@ -150,23 +152,23 @@
                 </div>
             </div>
         </sly-card>
-        <sly-card title="Preview current transformation"
-                  subtitle="Preview python code and aug result on random image"
+        <sly-card title="Preview"
+                  subtitle="Preview python code and aug result on a random image"
                   style="width: 100%">
-            <div slot="header">
-                <div class="fflex">
-                    <el-input-number class="mr10" v-model="state.previewCount" :min="1" :max="20"
-                                     size="small"></el-input-number>
-                    <el-button
-                            type="primary"
-                            @click="state.previewLoading = true; command('preview')"
-                            :disabled="!state.aug"
-                            :loading="state.previewLoading"
-                    >
-                        <i class="zmdi zmdi-slideshow" style="margin-right: 5px"></i> Preview
-                    </el-button>
-                </div>
-            </div>
+            <!--            <div slot="header">-->
+            <!--                <div class="fflex">-->
+            <!--                    <el-input-number class="mr10" v-model="state.previewCount" :min="1" :max="20"-->
+            <!--                                     size="small"></el-input-number>-->
+            <!--                    <el-button-->
+            <!--                            type="primary"-->
+            <!--                            @click="state.previewLoading = true; command('preview')"-->
+            <!--                            :disabled="!state.aug"-->
+            <!--                            :loading="state.previewLoading"-->
+            <!--                    >-->
+            <!--                        <i class="zmdi zmdi-slideshow" style="margin-right: 5px"></i> Preview-->
+            <!--                    </el-button>-->
+            <!--                </div>-->
+            <!--            </div>-->
 
             <div v-if="!data.previewPy && !state.previewLoading && !state.aug">
                 Press Preview button to show python code and visualize image examples
