--- a/src/gui.html
+++ b/src/gui.html
@@ -26,6 +26,15 @@
 
     <sly-card title="Your custom augmentation pipeline"
               subtitle="Add transformations in a sequence, preview the results of individual aug or a whole pipeline">
+        <div class="fflex" style="flex-direction: column">
+            <div>{{state.num}}</div>
+            <el-input-number v-model="state.num" :min="-5" :max="100" :debounce="1000"></el-input-number>
+            <div>{{state.fl}}</div>
+            <el-input-number v-model="state.fl" :min="0" :max="1" :step="0.1" :debounce="1000"></el-input-number>
+        </div>
+
+
+
         <sly-field title="" description="Input project">
             <a slot="title" target="_blank"
                :href="`/projects/${data.projectId}/datasets`">{{data.projectName}} ({{data.projectItemsCount}}
