--- a/src/gui.html
+++ b/src/gui.html
@@ -106,13 +106,15 @@
                     <div v-for="item in data.config[state.category][state.aug].params" :key="item.pname">
                         <sly-field :title="item.pname" class="auto-field">
                             <div v-if="item.type === 'el-slider-range'" class="fflex">
-                                <el-slider class="ml15" size="small"
-                                           style="margin-right: 20px; flex: 1;"
+                                <el-slider class="ml5 mr5" size="small"
+                                           style="flex: 1;"
                                            v-model="state.augVModels[state.category][state.aug][item.pname]" range
                                            :min="item.min" :max="item.max" :step="item.step || 1">
                                 </el-slider>
-                                <span>({{state.augVModels[state.category][state.aug][item.pname][0]}},
-                                          {{state.augVModels[state.category][state.aug][item.pname][1]}})</span>
+                                <span style="width: 70px; text-align: right;">
+                                    ({{state.augVModels[state.category][state.aug][item.pname][0].toFixed(2)}},
+                                    {{state.augVModels[state.category][state.aug][item.pname][1].toFixed(2)}})
+                                </span>
                             </div>
                             <div v-if="item.type === 'el-input-number-range'" class="fflex">
                                 <div class="fflex">
