--- a/src/gui.html
+++ b/src/gui.html
@@ -87,7 +87,7 @@
                   style="min-width: 350px; max-width: 350px;">
             <div slot="header">
                 <el-button type="danger" class="regular" size="small" @click="state.addMode = false; state.aug = null">
-                    <i class="zmdi zmdi-close"></i> Cancel
+                    <i class="zmdi zmdi-close"></i>
                 </el-button>
             </div>
 
@@ -169,11 +169,15 @@
                                            :value="val"></el-option>
                             </el-select>
                         </sly-field>
-                        <sly-field title="Apply sometimes" class="apply aug with probability">
-                            <el-checkbox v-model="state.sometimes">Option</el-checkbox>
-                            <el-input-number v-model="state.sometimesP" :min="0" :max="1" :step="0.01" :debounce="1000"></el-input-number>
-                        </sly-field>
                     </div>
+                    <sly-field title="Apply sometimes" description="apply aug with given probability">
+                        <el-checkbox v-model="state.sometimes"><b>Apply sometimes</b></el-checkbox>
+                        <el-input-number v-model="state.sometimesP"
+                                         :disabled="!state.sometimes"
+                                         :min="0" :max="1" :step="0.01"
+                                         size="small"
+                                         :debounce="1000"></el-input-number>
+                    </sly-field>
                 </sly-field>
                 <div v-if="state.aug">
                     <div class="fflex mt10" style="justify-content: space-between;">
